# FAVE-Med

./: .env.example  .gitignore  BENCHMARK_COMPLETION_PLAN.md  EXPERIMENT_REPORT.md  GOLD_LEAKAGE_AUDIT.md  IMPLEMENTATION_PROGRESS.md  README.md  WORK_LOG.md  pyproject.toml  requirements.txt
configs/experiments/: cross_domain.yaml  medical_pilot.yaml  telecom_end_to_end_mock_v3.yaml  telecom_openai_10.yaml  telecom_openai_3.yaml  telecom_openai_3_gpt54_v4.yaml  telecom_pilot.yaml  telecom_retrieval_seed_v2.yaml  telecom_seed_smoke_v2.yaml  typed_medical_openai_dev3.yaml  typed_telecom_openai_dev3.yaml
configs/reproductions/: external_methods.yaml
data/medical/: MEDCALC_BENCH_VERIFIED_PIN.md
docs/: CURRENT_LIMITATIONS.md  EXTERNAL_REPRODUCTION.md  HUMAN_REVIEW_PROTOCOL.md  METHOD_MATRIX.md  RESEARCH_CLAIMS.md  RESULT_DRIVEN_EXECUTION_REPORT.md
reports/: PAID_DEVELOPMENT_REPRODUCTION_20260716.md  medrac_official_dev.json
scripts/: __init__.py  audit_candidate_readiness.py  build_review_ready_development.py  collect_telecom_candidates.py  compute_annotation_agreement.py  create_blinded_review_packets.py  export_annotation_sheet.py  fetch_medcalc_verified.py  import_annotation_sheet.py  prepare_external_reproductions.py  run_medrac_official_dev.py  select_medcalc_verified.py  validate_candidate_pool.py  validate_independent_reviews.py
src/applicability_qa/: __init__.py  benchmark_tools.py
tests/core/: test_benchmark_tools.py  test_core.py  test_development_candidates.py  test_evaluator_v2.py  test_no_gold_leakage.py  test_passage_signatures.py  test_pipelines.py  (+4 more)
(+143 files in other folders)
